# services/core/internal/modules/identity/handler/dto.go
@@ -45,15 +45,6 @@ type OAuthNativeAppleCallbackRequest struct {
 	Email         *string `json:"email,omitempty" binding:"omitempty,email"`
 }
 
-type OAuthNativeCallbackRequest struct {
-	Code          string  `json:"code,omitempty"`
-	State         string  `json:"state,omitempty"`
-	RedirectURI   string  `json:"redirect_uri,omitempty"`
-	IdentityToken string  `json:"identity_token,omitempty"`
-	FullName      *string `json:"full_name,omitempty"`
-	Email         *string `json:"email,omitempty"`
-}
-
 type UserResponse struct {
 	ID             uuid.UUID `json:"id"`
 	Phone          *string   `json:"phone,omitempty"`
